[project]
name = "motion-video-search"
description = "Search an index of videos by motion image"
version = "0.8.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/IDGallagher/MotionVideoSearch"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "iggy101"
DisplayName = "Motion-Video-Search"
Icon = ""
